# PsychAgent

./: .gitignore  README.md  pyproject.toml
psych_agent/: __main__.py  agent.py
