[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "psych-agent"
version = "0.1.0-alpha.1"
description = "Psychology Agent"
authors = ["Guo Zhang <zhangguo@quanttide.com>"]
readme = "README.md"
packages = [{include = "psych_agent"}]

[tool.poetry.dependencies]
python = "^3.9"
