[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [
    {name = "QuantTide", email = "opensource@quanttide.com"},
]
requires-python = ">=3.9,<4.0"
dependencies = [
    "typer>=0.9.0",
]
name = "psych-agent"
version = "0.1.0-alpha.1"
description = "Psychology Agent"
readme = "README.md"

[tool.pdm.build]
includes = [
    "psych_agent",
]
